sdr-research/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdr-viewer
  namespace: sdr-research
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "authentik.authentik.svc.cluster.local"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sdr.white.fm
    - sdr.internal.white.fm
    secretName: sdr-white-fm-tls
  - hosts:
    - sdr.w3rdw.radio
    - sdr.internal.w3rdw.radio
    secretName: sdr-w3rdw-radio-tls
  rules:
  - host: sdr.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 9443
  - host: sdr.w3rdw.radio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 9443
  - host: sdr.internal.white.fm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 9443
  - host: sdr.internal.w3rdw.radio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 9443
